/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

package aasdk.proto.data;

message TouchConfig {
  required uint32 width = 1;
  required uint32 height = 2;
}
